# laolin-brain

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  bootstrap  docker-compose.yml  ecosystem.config.js  next.config.ts  nginx.conf.example  package-lock.json  package.json  playwright.config.ts  run-tauri-app.ps1  tsconfig.json  worklog.md
.gitee/workflows/: ci.yml
.zscripts/: dev.sh
agent-ctx/: 1-phase1-developer.md  10-c-gesture-subagent.md  11-a-activity-integration.md  2a-performance-optimization.md  3-phase3-developer.md  3-semantic-search-developer.md  3a-pwa-developer.md  4-playwright-e2e-tests.md  4a-tauri-desktop-foundation.md  5a-main-agent.md  5b-tauri-enhancement.md  refactor-summary.md
db/: custom.db
docs/: API.md  DEPLOY.md  DEVELOPMENT.md  TAURI_SETUP.md
docs/进度文档目录/: 20260702-Rust编译修复-完成.md  20260708-Tauri白屏修复-完成.md  20260708-Tauri白屏修复-进行中.md
download/: dev-doc.md
e2e/: auth.spec.ts  core-path.spec.ts  edge-cases.spec.ts  file-operations.spec.ts  files.spec.ts  navigation.spec.ts  settings.spec.ts
prisma/: schema.prisma
public/: manifest.json  robots.txt  sw.js
scripts/: backup.sh  deploy.sh  install.sh  migrate.js  restore.sh  status.sh  upgrade.sh
src/: instrumentation.ts  middleware.ts
src-tauri/: Cargo.toml  build-exe.ps1  build-msvc.bat  build-msvc.ps1  build-tauri.ps1  dev-tauri.ps1  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  menu.rs  search_service.rs  system_search.rs  tray.rs
src/__tests__/: instrumentation.test.ts  setup.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/hooks/: use-automation.ts  use-avatar.ts  use-context-menu.ts  use-gestures.ts  use-keyboard-shortcuts.ts  use-lazy-image.ts  use-mobile.ts  use-notification.ts  use-offline-queue.ts  use-search-history.ts  use-service-worker.ts  use-share.ts  use-swipe.ts  (+1 more)
(+649 files in other folders)
