[package]
name = "knowledge-base"
version = "1.0.0"
description = "Personal Private Second Brain - 桌面版"
authors = ["Knowledge Base Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
