[package]
name = "knowledge-base"
version = "1.0.0"
description = "Personal Private Second Brain - 桌面版"
authors = ["Knowledge Base Team"]
edition = "2021"

[lib]
name = "knowledge_base"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
once_cell = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

# 全盘文件搜索 - NTFS MFT 读取 + USN Journal 监听 + Everything IPC
[target.'cfg(target_os = "windows")'.dependencies]
ntfs-reader = "0.4"
usn-journal-rs = "0.4"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Registry", "Win32_System_Memory"] }
everything-ipc = { version = "0.1", features = ["tokio"] }
chrono = "0.4"
windows-service = "0.7"
time = { version = "0.3", features = ["formatting", "parsing"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
